test/resources/testcontents/testing/saker/build/tests/tasks/script/SyntaxErrorsScriptTaskTest/missingternary.build
build {
	$condition = false
	include(
		secondtarget,
		MyParam: $condition 
				? "1", 
				: "2",
	)
}


secondtarget(
	in MyParam
) {
	print($MyParam)
}